<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.abhi.redeyes.cinemabase.UI.ShowDetails">

    <ImageView
        android:id="@+id/movie_full_poster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imagedescription"
        android:scaleType="centerCrop"
        android:src="@drawable/image_icon" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textSize="32sp"
                android:textStyle="bold"
                tools:text="@string/app_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/rating"
                    android:textAllCaps="true"
                    android:textAppearance="@style/textStyle" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/textStyle"
                    tools:text="4.5" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/overview"
                android:textAlignment="viewStart"
                android:textAllCaps="true"
                android:textAppearance="@style/textStyle" />

            <TextView
                android:id="@+id/movie_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textAlignment="viewStart"
                android:textColor="#ffffff"
                android:textSize="24sp"
                tools:text="@string/dummytext" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/revenue"
                    android:textAllCaps="true"
                    android:textAppearance="@style/textStyle"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"/>

                <TextView
                    android:id="@+id/revenue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/textStyle"
                    tools:text="40000" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rlesedate"
                    android:textAllCaps="true"
                    android:textAppearance="@style/textStyle"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"/>

                <TextView
                    android:id="@+id/releasedate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/textStyle"
                    tools:text="2-17-1992" />
            </LinearLayout>
        </LinearLayout>


    </ScrollView>

</LinearLayout>
