<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recyclerview_item_movie_description"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
 android:padding="16dp"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
android:background="@color/colorAccent"
        android:paddingTop="16dp"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/movie_full_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/image_icon"
                android:scaleType="centerCrop"
                android:paddingTop="164dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/imagedescription"
                />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:textColor="#ffffff"
                android:textSize="32sp"
                android:textStyle="bold"
                tools:text="@string/app_name"
                android:paddingTop="32dp"
                android:paddingBottom="5dp"/>
            <TextView
                android:id="@+id/movie_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="5dp"
                android:textAlignment="viewStart"
                android:textColor="#ffffff"
                android:textSize="24sp"
                tools:text="@string/dummytext" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>