<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- A CardView that contains a TextView -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:padding="5dp"
        >
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardview_PopularMovies"
        android:layout_gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="4dp"
        android:layout_weight="1"
        app:elevation="5dp"
        app:cardUseCompatPadding="true"
        android:layout_marginRight="2.5dp"
        >
        <TextView
         android:text="@string/PopularMovies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:gravity="center"
           />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardview_RecentMovies"
        android:layout_gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="4dp"
        android:layout_weight="1"
        app:elevation="5dp"
        app:cardUseCompatPadding="true"
        android:layout_marginLeft="2.5dp"
       >

        <TextView
            android:text="@string/NowPlayingMovies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:gravity="center"/>

    </android.support.v7.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:padding="5dp">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardview_TopRatedMovies"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardCornerRadius="4dp"
            android:layout_weight="1"
            app:cardUseCompatPadding="true"
            app:elevation="16dp"
            android:layout_marginRight="2.5dp"
            >
            <TextView
                android:text="@string/TopRatedMovies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:gravity="center"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardview_UpComingMovies"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true"
            android:layout_weight="1"
            app:elevation="16dp"
            android:layout_marginLeft="2.5dp"

            >

            <TextView
                android:text="@string/UpcomingMovies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:gravity="center"/>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>